progressed with client side commands

--- a/NCloud/NCloud/Views/Terminal/Index.cshtml
+++ b/NCloud/NCloud/Views/Terminal/Index.cshtml
@@ -19,70 +19,76 @@
     </div>
 </div>
 <div class="hidden">
-    <a asp-controller="Drive" asp-action="Download"></a>
+    <a href="" download id="downloadTrigger"></a>
 </div>
 
 <link rel="stylesheet" href="~/lib/jquery.terminal/css/jquery.terminal.min.css" />
 
 @section Scripts {
 
-        <script src="~/lib/jquery.terminal/js/jquery.terminal.min.js"></script>
-        <script src="~/lib/jquery.terminal/js/autocomplete_menu.js"></script>
-        <script src="~/js/terminal.js"></script>
+    <script src="~/lib/jquery.terminal/js/jquery.terminal.min.js"></script>
+    <script src="~/lib/jquery.terminal/js/autocomplete_menu.js"></script>
+    <script src="~/js/terminal.js"></script>
 
-        <script type="text/javascript">
-            jQuery(function ($, undefined) {
+    <script type="text/javascript">
+        jQuery(function ($, undefined) {
 
-                const terminal = new TerminalCommand;
-                
-                const keywords = @Html.Raw(Json.Serialize(Model.Commands));
+            const terminal = new TerminalCommand;
 
-                keywords.push("exit", "clear",  ...terminal.clientSideCommands);
+            const keywords = @Html.Raw(Json.Serialize(Model.Commands));
 
-                $('#terminal').terminal(async function (command) {
+            keywords.push("exit", "clear", ...terminal.clientSideCommands);
 
-                    if (command !== '') {
+            $('#terminal').terminal(async function (command) {
 
-                        if (command === 'exit') {
-                            window.open('@Url.Action("Details","Drive")', '_self');
-                            this.set_prompt("");
-                            this.disable();
-                            return;
-                        }
+                if (command !== '') {
 
-
-                        if(terminal.ExecuteClientSideCommand(command)){
-                            return;
-                        }
-
-                        var result = await terminal.eval(command, "@Url.Action("Evaluate","Terminal")");
-
-                        this.echo(`${result.result}\n${result.message}`);
-
-                        if (result.payload !== "") {
-                            this.set_prompt(`${result.payload}> `);
-                        }
+                    if (command === 'exit') {
+                        window.open('@Url.Action("Details","Drive")', '_self');
+                        this.set_prompt("");
+                        this.disable();
+                        return;
                     }
-                },
-                    {
-                        greetings: 'Hello [[b;white;]@User.Identity!.Name]',
-                        prompt: '@Model.CurrentDirectory> ',
-                        checkArity: false,
-                        autocompleteMenu: true,
-                        tabcompletion: true,
-                        completion: keywords
-                    }
-                );
 
-                $.terminal.defaults.formatters.push(function (string) {
-                    return string.split(/((?:\s|&nbsp;)+)/).map(function (string) {
-                        if (keywords.indexOf(string) != -1) {
-                            return '[[b;yellow;]' + string + ']';
-                        } else {
-                            return string;
-                        }
-                    }).join('');
-                });
+                    this.pause();
+
+                    const ajaxData = terminal.ExecuteClientSideCommand(command, '@Url.Action("CheckClientSideCommand","Terminal")', this));
+
+                    if(ajaxData[] !== ""){
+                        this.echo(ajaxData);
+                    }
+                    
+                    if(ajaxData[1])
+                        return;
+
+                    var result = await terminal.ExecuteServerSideCommand(command, "@Url.Action("Evaluate","Terminal")");
+
+                    this.echo(`${result.result}\n${result.message}`);
+
+                    if (result.payload !== "") {
+                        this.set_prompt(`${result.payload}> `);
+                    }
+                }
+            },
+                {
+                    greetings: 'Hello [[b;white;]@User.Identity!.Name]',
+                    prompt: '@Model.CurrentDirectory> ',
+                    checkArity: false,
+                    autocompleteMenu: true,
+                    tabcompletion: true,
+                    completion: keywords
+                }
+            );
+
+            $.terminal.defaults.formatters.push(function (string) {
+                return string.split(/((?:\s|&nbsp;)+)/).map(function (string) {
+                    if (keywords.indexOf(string) != -1) {
+                        return '[[b;yellow;]' + string + ']';
+                    } else {
+                        return string;
+                    }
+                }).join('');
             });
-        </script>
+        });
+    </script>
 }
