progressed with commands

--- a/NCloud/NCloud/Views/Terminal/Index.cshtml
+++ b/NCloud/NCloud/Views/Terminal/Index.cshtml
@@ -54,7 +54,7 @@
 
                     const ajaxData = terminal.ExecuteClientSideCommand(command, '@Url.Action("CheckClientSideCommand","Terminal")', this));
 
-                    if(ajaxData[] !== ""){
+                    if(ajaxData[0] !== ""){
                         this.echo(ajaxData);
                     }
                     
