hom e buttons and fixed breadcrumb

--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -27,7 +27,8 @@
         </div>
         <div class="">
             <div class="btn-group" role="group">
-                <a class="btn btn-primary" id="refreshBtn" asp-controller="Drive" asp-action="Details"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                <a class="btn btn-primary" asp-controller="Drive" asp-action="Home"><img src="~/utilities/home.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                <a class="btn btn-secondary" id="refreshBtn" asp-controller="Drive" asp-action="Details"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <a class="btn btn-secondary" asp-controller="Drive" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <a class="btn btn-secondary" asp-controller="Drive" asp-action="PasteDataFromClipBoard"><img src="~/utilities/paste.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <button type="button" class="btn btn-secondary" id="addFileBtn"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded align-middle" /></button>
