--- a/NCloud/NCloud/Views/DashBoard/Index.cshtml
+++ b/NCloud/NCloud/Views/DashBoard/Index.cshtml
@@ -4,21 +4,41 @@
     ViewData["Title"] = "DashBoard";
 }
 
-<div class="w-100">
-    <h1>Available Space</h1>
-    <div class="row w-100 justify-content-center my-5">
-        <h3 class="w-100 text-center">@(User.Identity?.Name ?? "Unassigned")</h3>
-        <div class="w-100">
-            <div class="progress" style="height: 20px;">
-                <div class="progress-bar" style="width:10%" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+<div class="w-100 text-dark">
+    <div class="row w-100 justify-content-center my-5 text-center">
+        <h1 class="mb-5">
+            @(User.Identity?.Name ?? "Unassigned")
+        </h1>
+        <div class="row w-100 text-center">
+            <h2 class="col w-50 mb-3">
+                <label for="usedSpace">Used Space</label>
+            </h2>
+            <h2 class="col w-50 mb-3">
+                <label for="remainingSpace">Remaining Space</label>
+            </h2>
+        </div>
+        <div class="col w-50 d-flex justify-content-center align-items-center">
+            <div class="progress-bar css">
+                <progress id="usedSpace" min="0" max="100" value="87">OK</progress>
+            </div>
+        </div>
+        <div class="col w-50 col d-flex justify-content-center align-items-center">
+            <div class="progress-bar css">
+                <progress id="remainingSpace" min="0" max="100" value="87"></progress>
             </div>
         </div>
     </div>
 </div>
 
 <div class="mt-5">
-    <h1>Shared Folders</h1>
     <table class="table" id="sharedfolders">
+        <thead>
+            <tr>
+                <th colspan="3">
+                    <h2>Shared Directories</h2>
+                </th>
+            </tr>
+        </thead>
         @foreach (var folderUrl in Model.SharedFolderUrls)
         {
             string? url = Url.Action(Model.WebControllerAndActionForDetails.Second, Model.WebControllerAndActionForDetails.First, new { path = HashManager.EncryptString(folderUrl) }, Context.Request.Scheme);
@@ -52,8 +72,14 @@
     </table>
 </div>
 <div class="mt-5">
-    <h1>Shared Files</h1>
     <table class="table" id="sharedfiles">
+        <thead>
+            <tr>
+                <th colspan="3">
+                    <h2>Shared Files</h2>
+                </th>
+            </tr>
+        </thead>
         @foreach (var fileUrl in Model.SharedFileUrls)
         {
             string? url = Url.Action(Model.WebControllerAndActionForDownload.Second, Model.WebControllerAndActionForDownload.First, new { path = HashManager.EncryptString(fileUrl) }, Context.Request.Scheme);
