--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -31,8 +31,8 @@
                 <a class="btn btn-secondary" id="refreshBtn" asp-controller="Drive" asp-action="Details"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <a class="btn btn-secondary" asp-controller="Drive" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <a class="btn btn-secondary" asp-controller="Drive" asp-action="PasteDataFromClipBoard"><img src="~/utilities/paste.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                <button type="button" class="btn btn-secondary" id="addFileBtn"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded align-middle" /></button>
-                <button type="button" class="btn btn-secondary" id="addFolderBtn"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+                <button type="button" class="btn btn-secondary" id="addFileBtn" data-bs-toggle="collapse" data-bs-target="#addFileField" aria-expanded="false" aria-controls="addFileField"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+                <button type="button" class="btn btn-secondary" id="addFolderBtn" data-bs-toggle="collapse" data-bs-target="#addFolderField" aria-expanded="false" aria-controls="addFolderField"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
                 <a class="btn btn-secondary" asp-controller="Terminal" asp-action="Index" asp-route-currentPath="@Model.CurrentPathShow"><img src="~/utilities/terminal.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <a class="btn btn-danger" asp-controller="Drive" asp-action="DeleteItems"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
             </div>
@@ -41,29 +41,32 @@
 </div>
 
 <div class="w-100">
-    <fieldset class="bg-secondary border border-4 border-dark p-2 m-2 rounded @(TempData["FolderError"] is null ? "hiddenfield" : "")" id="addFolderField">
-        <legend class="btn btn-outline-dark rounded-pill w-auto">Add Folder</legend>
-        <div class="d-flex justify-content-center w-100">
-            <form asp-action="AddNewFolder" class="w-100">
-                <div class="w-100 d-inline-flex input-group form-group">
-                    <input type="text" name="folderName" placeholder="Write new Folder name here..." class="d-inline form-control" />
-                    <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
-                </div>
-            </form>
-        </div>
-    </fieldset>
-    <!------------------------------------------------------------->
-    <fieldset class="bg-secondary border border-4 border-dark p-2 m-2 rounded @(TempData["FileError"] is null ? "hiddenfield" : "")" id="addFileField">
-        <legend class="btn btn-outline-dark rounded-pill w-auto">Add Files</legend>
-        <div class="d-flex justify-content-center w-100">
-            <form asp-action="AddNewFiles" class="w-100" enctype="multipart/form-data">
-                <div class="w-100 d-inline-flex input-group form-group">
-                    <input type="file" multiple name="files" class="d-inline form-control" />
-                    <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/file-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
-                </div>
-            </form>
-        </div>
-    </fieldset>
+    <div class="collapse" id="addFolderField">
+        <fieldset class="bg-light border border-4 border-primary p-2 m-2 rounded">
+            <legend class="text-dark fw-bold rounded-pill w-auto">Add Folder</legend>
+            <div class="d-flex justify-content-center w-100">
+                <form asp-action="AddNewFolder" class="w-100">
+                    <div class="w-100 d-inline-flex input-group form-group">
+                        <input type="text" name="folderName" placeholder="Write new directory name here..." class="d-inline form-control" />
+                        <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+                    </div>
+                </form>
+            </div>
+        </fieldset>
+    </div>
+    <div class="collapse" id="addFileField">
+        <fieldset class="bg-light border border-4 border-primary p-2 m-2 rounded">
+            <legend class="text-dark fw-bold rounded-pill w-auto">Add Files</legend>
+            <div class="d-flex justify-content-center w-100">
+                <form asp-action="AddNewFiles" class="w-100" enctype="multipart/form-data">
+                    <div class="w-100 d-inline-flex input-group form-group">
+                        <input type="file" multiple name="files" class="d-inline form-control" />
+                        <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/file-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+                    </div>
+                </form>
+            </div>
+        </fieldset>
+    </div>
 </div>
 
 <div class="w-100" id="itemsTable">
@@ -81,36 +84,40 @@
 @section Scripts {
     <script type="text/javascript">
 
+
+        const addFolderField = new bootstrap.Collapse(document.getElementById('addFolderField'), { toggle: false });
+        const addFileField = new bootstrap.Collapse(document.getElementById('addFileField'), { toggle: false });
+
         function init() {
             document.getElementById("addFolderBtn").addEventListener("click", AddFolderClicked, false);
             document.getElementById("addFileBtn").addEventListener("click", AddFileClicked, false);
-            document.getElementById("refreshBtn").addEventListener("click", RefreshClicked, false);
             document.getElementById("breadcrumbDiv").addEventListener("click", CrumbClicked, false);
             document.getElementById("currentPath").addEventListener("focusout", InputFocusLost, false);
             CheckSessionStorage();
         }
 
         function AddFolderClicked(e) {
-            document.getElementById("addFolderField").classList.toggle("hiddenfield");
-            document.getElementById("addFileField").classList.add("hiddenfield");
+            addFileField.hide();
+            sessionStorage.setItem("openedMiniWindow", "folder");
         }
 
         function AddFileClicked(e) {
-            document.getElementById("addFolderField").classList.add("hiddenfield");
-            document.getElementById("addFileField").classList.toggle("hiddenfield");
-        }
+            addFolderField.hide();
+            sessionStorage.setItem("openedMiniWindow", "file");
 
-        function RefreshClicked(e) {
-            let element = "";
-            if (!document.getElementById("addFolderField").classList.contains("hiddenfield")) element = "addFolderField";
-            if (!document.getElementById("addFileField").classList.contains("hiddenfield")) element = "addFileField";
-            sessionStorage.setItem("openedMiniWindow", element);
         }
 
         function CheckSessionStorage() {
             let item = sessionStorage.getItem("openedMiniWindow");
             if (item !== null) {
-                document.getElementById(item).classList.toggle("hiddenfield")
+
+                if (item == 'file') {
+                    addFileField.show();
+                }
+
+                if (item == 'folder') {
+                    AddFolderClicked.show();
+                }
             }
             sessionStorage.removeItem("openedMiniWindow");
         }
