--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container w-50">
-    <div class="row row-cols-1 row-cols-md-2 g-4 min-vh-100 align-items-center">
+    <div class="row row-cols-1 row-cols-md-2 g-4 vh-100 align-items-center">
         <div class="col-sm-6">
             <div class="card border border-4 border-primary rounded p-3">
                 <img src="/utilities/editor-code.svg" class="card-img-top" alt="code-editor">
