--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -89,7 +89,7 @@
 
                                     <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
                                         <td class="w-25 text-break">
-                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
                                         </td>
                                         <td class="text-break">
                                             <a href="@url" class="text-decoration-none" target="_blank">@url</a>
@@ -229,7 +229,7 @@
 
                                     <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
                                         <td class="w-25 text-break">
-                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard('@url')"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
                                         </td>
                                         <td class="text-break">
                                             <a href="@url" class="text-decoration-none" target="_blank">@url</a>
