--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -396,47 +396,10 @@ h6 {
     initial-value: 0;
 }
 
-@-webkit-keyframes html-progress {
-    to {
-        --progress-value: 92;
-    }
-}
-
-@keyframes html-progress {
-    to {
-        --progress-value: 92;
-    }
-}
-
-@-webkit-keyframes css-progress {
-    to {
-        --progress-value: 87;
-    }
-}
-
-@keyframes css-progress {
-    to {
-        --progress-value: 87;
-    }
-}
-
-@-webkit-keyframes js-progress {
-    to {
-        --progress-value: 73;
-    }
-}
-
-@keyframes js-progress {
-    to {
-        --progress-value: 73;
-    }
-}
-
 .progress-bar {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    /* to center the percentage value */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -450,37 +413,26 @@ h6 {
         font-size: 40px;
     }
 
-.html {
+.first {
     background: radial-gradient(closest-side, white 79%, transparent 80% 100%), conic-gradient(deepskyblue calc(var(--progress-value) * 1%), cornflowerblue 0);
-    -webkit-animation: html-progress 2s 1 forwards;
-    animation: html-progress 2s 1 forwards;
+    -webkit-animation: first-progress 2s 1 forwards;
+    animation: first-progress 2s 1 forwards;
 }
 
-    .html::before {
-        -webkit-animation: html-progress 2s 1 forwards;
-        animation: html-progress 2s 1 forwards;
+    .first::before {
+        -webkit-animation: first-progress 2s 1 forwards;
+        animation: first-progress 2s 1 forwards;
     }
 
-.css {
+.second {
     background: radial-gradient(closest-side, white 79%, transparent 80% 100%, white 0), conic-gradient(deepskyblue calc(var(--progress-value) * 1%), cornflowerblue 0);
-    -webkit-animation: css-progress 2s 1 forwards;
-    animation: css-progress 2s 1 forwards;
+    -webkit-animation: second-progress 2s 1 forwards;
+    animation: second-progress 2s 1 forwards;
 }
 
-    .css::before {
-        -webkit-animation: css-progress 2s 1 forwards;
-        animation: css-progress 2s 1 forwards;
-    }
-
-.js {
-    background: radial-gradient(closest-side, white 79%, transparent 80% 100%, white 0), conic-gradient(deepskyblue calc(var(--progress-value) * 1%), cornflowerblue 0);
-    -webkit-animation: js-progress 2s 1 forwards;
-    animation: js-progress 2s 1 forwards;
-}
-
-    .js::before {
-        -webkit-animation: js-progress 2s 1 forwards;
-        animation: js-progress 2s 1 forwards;
+    .second::before {
+        -webkit-animation: second-progress 2s 1 forwards;
+        animation: second-progress 2s 1 forwards;
     }
 
 h2 {
