login changed for testing reasons

--- a/NCloud/NCloud/Views/Account/Register.cshtml
+++ b/NCloud/NCloud/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card bg-light text-dark" style="border-radius: 1rem;">
+            <div class="card bg-light text-dark border border-3 border-primary" style="border-radius: 1rem;">
                 <div class="card-body px-5 pt-3 pb-5 text-center">
                     <form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewBag.ReturnUrl">
                         <div class="mb-md-5 mt-md-4 pb-5">
@@ -59,12 +59,12 @@
                                                     asp-show-refresh-button="false"
                                                     asp-dir="ltr" />
                             </div>
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Register</button>
+                            <button class="btn btn-primary btn-lg px-5" type="submit">Register</button>
                         </div>
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div>
                             <p class="mb-0">
-                                Already have an account? <a asp-controller="Account" asp-action="Login" class="text-white-50 fw-bold">Login</a>
+                                Already have an account? <a asp-controller="Account" asp-action="Login" class="text-primary-50 fw-bold">Login</a>
                             </p>
                         </div>
                     </form>
