--- a/NCloud/NCloud/Views/Account/Login.cshtml
+++ b/NCloud/NCloud/Views/Account/Login.cshtml
@@ -6,10 +6,9 @@
 <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card bg-light text-dark" style="border-radius: 1rem;">
+            <div class="card bg-light text-dark border border-3 border-primary" style="border-radius: 1rem;">
                 <div class="card-body px-5 pt-3 pb-5 text-center">
                     <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl">
-                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <img src="~/utilities/cloud_logo.png" width="200" class="ms-2" />
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
@@ -25,11 +24,12 @@
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                             @* <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> *@
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                            <button class="btn btn-primary btn-lg px-5" type="submit">Login</button>
                         </div>
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div>
                             <p class="mb-0">
-                                Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">Sign Up</a>
+                                Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-primary-50 fw-bold">Sign Up</a>
                             </p>
                         </div>
                     </form>
